--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,9 @@ DB_USER=postgres
 DB_NAME=teslo-shop
 DB_PASSWORD=123456
 
+# openssl rand -base64 32
+AUTH_SECRET="Nr/Fyn8EhKOORUBUnw5Ms6vedjuLccTWCXkVbKfIhi8="
+
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -12,3 +15,6 @@ DB_PASSWORD=123456
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/teslo-shop?schema=public"
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL_INTERNAL=http://127.0.0.1:3000
