--- a/.env.template
+++ b/.env.template
@@ -18,3 +18,12 @@ DATABASE_URL="postgresql://postgres:123456@localhost:5432/teslo-shop?schema=publ
 
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://127.0.0.1:3000
+
+# Paypal
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=paypalClientID
+PAYPAL_SECRET=paypalSecret
+
+PAYPAL_OAUTH_URL=https://api-m.sandbox.paypal.com/v1/oauth2/token
+
+#GET
+PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
