Admin section enabled

--- a/.env.template
+++ b/.env.template
@@ -27,3 +27,7 @@ PAYPAL_OAUTH_URL=https://api-m.sandbox.paypal.com/v1/oauth2/token
 
 #GET
 PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
+
+#CLOUDINARY
+#https://console.cloudinary.com/
+CLOUDINARY_URL=cloudinary:completecredential
